--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
+    "react-router-dom": "6.11.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -27,7 +28,7 @@
     "@nx/eslint": "18.0.7",
     "@nx/eslint-plugin": "18.0.7",
     "@nx/gatsby": "*",
-    "@nx/jest": "18.0.7",
+    "@nx/jest": "^18.3.3",
     "@nx/js": "18.0.7",
     "@nx/next": "18.0.7",
     "@nx/react": "18.0.7",
