Migrate react playground project

--- a/package.json
+++ b/package.json
@@ -5,6 +5,15 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "@mui/styled-engine": "^5.15.14",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "autoprefixer": "^10.4.19",
+    "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "gatsby": "4.22.0",
     "gatsby-plugin-image": "2.22.0",
     "gatsby-plugin-manifest": "4.22.0",
@@ -15,13 +24,18 @@
     "gatsby-plugin-typescript": "4.22.0",
     "gatsby-source-filesystem": "4.22.0",
     "gatsby-transformer-sharp": "4.22.0",
+    "msw": "^2.2.14",
     "next": "14.0.4",
+    "postcss": "^8.4.38",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
     "react-router-dom": "6.11.2",
-    "tslib": "^2.3.0"
+    "styled-components": "^6.1.8",
+    "tailwind": "^4.0.0",
+    "tslib": "^2.3.0",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@nx/cypress": "18.0.7",
@@ -75,6 +89,7 @@
     "nx": "^18.0.7",
     "prettier": "^2.6.2",
     "storybook": "7.6.17",
+    "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.3.2",
