--- a/apps/react-my-playground-e2e/project.json
+++ b/apps/react-my-playground-e2e/project.json
@@ -1,6 +1,6 @@
 {
   "name": "react-my-playground-e2e",
-  "$schema": "../node_modules/nx/schemas/project-schema.json",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/react-my-playground-e2e/src",
   "targets": {},
