--- a/apps/react-my-playground/project.json
+++ b/apps/react-my-playground/project.json
@@ -1,6 +1,6 @@
 {
   "name": "react-my-playground",
-  "$schema": "../node_modules/nx/schemas/project-schema.json",
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/react-my-playground/src",
   "projectType": "application",
   "targets": {},
