--- a/package.json
+++ b/package.json
@@ -61,7 +61,10 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@testing-library/dom": "^10.0.0",
+    "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "14.0.0",
+    "@testing-library/user-event": "^14.5.2",
     "@types/jest": "^29.4.0",
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
@@ -85,6 +88,7 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-fetch-mock": "^3.0.3",
     "jsdom": "~22.1.0",
     "nx": "^18.0.7",
     "prettier": "^2.6.2",
