--- a/apps/jest-setup/tsconfig.spec.json
+++ b/apps/jest-setup/tsconfig.spec.json
@@ -3,8 +3,9 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "module": "commonjs",
-    "types": ["jest", "node",
-    // cssmodule import wasn't here by default, so we needed to add it.
+    "types": [
+    "jest",
+    "node",
     "@nx/react/typings/cssmodule.d.ts",
     "@testing-library/jest-dom"
     ]
