--- a/apps/react-my-playground/tsconfig.spec.json
+++ b/apps/react-my-playground/tsconfig.spec.json
@@ -18,6 +18,9 @@
     "jest.config.ts",
     "src/**/*.test.ts",
     "src/**/*.spec.ts",
-    "src/**/*.d.ts"
+   
+    "src/**/*.d.ts",
+    // this needs do be added to recognise type in spec.tsx
+    "src/**/*.spec.tsx",
   ]
 }
