--- a/package.json
+++ b/package.json
@@ -28,10 +28,11 @@
     "zod": "^3.23.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@nx/cypress": "18.0.7",
     "@nx/eslint": "18.0.7",
     "@nx/eslint-plugin": "18.0.7",
-    "@nx/gatsby": "*",
     "@nx/jest": "^18.3.3",
     "@nx/js": "18.3.3",
     "@nx/next": "18.0.7",
@@ -88,6 +89,7 @@
     "ts-node": "10.9.1",
     "typescript": "~5.3.2",
     "vite": "~5.0.0",
+    "vite-plugin-dts": "~2.3.0",
     "vitest": "^1.3.1"
   }
 }
