--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,10 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {},
+    "paths": {
+      "@new/common": ["components/src/index.ts"],
+      "@new/components/common": ["libs/components/common/src/index.ts"]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
