Trying to add sqlite, not working

--- a/apps/next-app/project.json
+++ b/apps/next-app/project.json
@@ -3,6 +3,8 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/next-app",
   "projectType": "application",
-  "targets": {},
+  "targets": {
+   
+  },
   "tags": []
 }
