--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,14 @@
-# See http://help.github.com/ignore-files/ for more about ignoring files.
-# Nx
+.env
 .nx
-# compiled output
+
 dist
 tmp
 /out-tsc
 
-# Temp script not commiting
 temp.sh
 
-# dependencies
 node_modules
 
-# IDEs and editors
 /.idea
 .project
 .classpath
