--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@prisma/client": "^5.13.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
@@ -22,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
     "react-router-dom": "6.11.2",
+    "sqlite3": "^5.1.7",
     "styled-components": "^6.1.8",
     "tailwind": "^4.0.0",
     "tslib": "^2.3.0",
@@ -79,10 +81,12 @@
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jest-fetch-mock": "^3.0.3",
     "jsdom": "~22.1.0",
     "nx": "^18.0.7",
     "prettier": "^2.6.2",
+    "prisma": "^5.13.0",
     "storybook": "7.6.17",
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
@@ -93,3 +97,4 @@
     "vitest": "^1.3.1"
   }
 }
+
