--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@headlessui/react": "^2.0.3",
+    "@heroicons/react": "^2.1.3",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine": "^5.15.14",
@@ -15,11 +17,13 @@
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "geist": "^1.3.0",
     "msw": "^2.2.14",
     "next": "14.0.4",
     "postcss": "^8.4.38",
     "prop-types": "15.8.1",
     "react": "18.2.0",
+    "react-cookie": "^7.1.4",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
     "react-router-dom": "6.11.2",
@@ -54,6 +58,8 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tailwindcss/typography": "^0.5.13",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "14.0.0",
@@ -86,6 +92,7 @@
     "jsdom": "~22.1.0",
     "nx": "^18.0.7",
     "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.13.0",
     "storybook": "7.6.17",
     "tailwindcss": "3.2.7",
@@ -97,4 +104,3 @@
     "vitest": "^1.3.1"
   }
 }
-
