--- a/apps/react-my-playground/project.json
+++ b/apps/react-my-playground/project.json
@@ -3,6 +3,13 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/react-my-playground/src",
   "projectType": "application",
-  "targets": {},
+  "targets": {
+    "gql:sync": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "graphql-codegen --config ./apps/react-my-playground/codegen.ts"
+      }
+    }
+  },
   "tags": []
 }
