Add apollo provider

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,15 +10,24 @@
     "importHelpers": true,
     "target": "esnext",
     "module": "esnext",
-    "lib": ["es2020", "dom"],
+    "lib": [
+      "es2020",
+      "dom"
+    ],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
       "@libs/next-app/utils/prisma-client": [
         "libs/next-app/utils/prisma-client/src/index.ts"
+      ],
+      "@libs/utils-apollo-provider": [
+        "libs/utils-apollo-provider/src/index.ts"
       ]
     }
   },
-  "exclude": ["node_modules", "tmp"]
+  "exclude": [
+    "node_modules",
+    "tmp"
+  ]
 }
