--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {},
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.10.3",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.0.3",
@@ -18,6 +19,7 @@
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "geist": "^1.3.0",
+    "graphql": "^16.8.1",
     "msw": "^2.2.14",
     "next": "14.0.4",
     "postcss": "^8.4.38",
