--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
+    "axios": "^1.6.8",
     "babel-jest": "^29.4.1",
     "babel-plugin-module-resolver": "4.1.0",
     "babel-preset-gatsby": "2.2.0",
