--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.13.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.11",
     "formik": "^2.4.6",
     "geist": "^1.3.0",
     "graphql": "^16.8.1",
