--- a/apps/next-mood/tsconfig.json
+++ b/apps/next-mood/tsconfig.json
@@ -28,7 +28,8 @@
     "**/*.jsx",
     "../../apps/next-mood/.next/types/**/*.ts",
     "../../dist/apps/next-mood/.next/types/**/*.ts",
-    "next-env.d.ts"
+    "next-env.d.ts",
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules",
