Update codegen & query

--- a/apps/react-my-playground/.eslintrc.json
+++ b/apps/react-my-playground/.eslintrc.json
@@ -3,16 +3,15 @@
   "ignorePatterns": ["!**/*"],
   "overrides": [
     {
-      "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
-      "rules": {}
-    },
-    {
-      "files": ["*.ts", "*.tsx"],
-      "rules": {}
-    },
-    {
-      "files": ["*.js", "*.jsx"],
-      "rules": {}
+      "files": [
+        // auto generated big commerce graphql has any type.
+        // We may be able to map extra scalars to th correct type. Need to be investigated.
+        "src/**/*.generated.ts"
+      ],
+      "rules": {
+        "@typescript-eslint/no-explicit-any": "off",
+        "@typescript-eslint/no-unused-vars": "off"
+      }
     }
   ]
 }
