--- a/apps/react-my-playground/project.json
+++ b/apps/react-my-playground/project.json
@@ -4,6 +4,12 @@
   "sourceRoot": "apps/react-my-playground/src",
   "projectType": "application",
   "targets": {
+    "dev": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "yarn nx serve react-my-playground"
+      }
+    },
     "gql:sync": {
       "executor": "nx:run-commands",
       "options": {
