--- a/apps/react-my-playground/project.json
+++ b/apps/react-my-playground/project.json
@@ -13,7 +13,7 @@
     "gql:sync": {
       "executor": "nx:run-commands",
       "options": {
-        "command": "./apps/react-my-playground/script/run-codegen.sh"
+        "command": "export NODE_TLS_REJECT_UNAUTHORIZED=0 && ./apps/react-my-playground/script/run-codegen.sh"
       }
     }
   },
