--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "styled-components": "^6.1.8",
     "tailwind": "^4.0.0",
     "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
     "zod": "^3.23.4"
   },
   "devDependencies": {
