--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,13 @@
 {
   "root": true,
   "ignorePatterns": ["**/*"],
-  "plugins": [
-    "@nx"
-  ],
+  "plugins": ["@nx"],
   "overrides": [
+    {
+      "files": "*.json",
+      "parser": "jsonc-eslint-parser",
+      "rules": {}
+    },
     {
       "files": ["*.ts", "*.tsx", "*.js", "*.jsx"],
       "rules": {
@@ -33,15 +36,12 @@
         "plugin:import/typescript",
         "plugin:jest/recommended",
         "plugin:prettier/recommended"
-      
       ],
       "rules": {}
     },
     {
       "files": ["*.js", "*.jsx"],
-      "extends": [
-        "plugin:@nx/javascript"
-      ],
+      "extends": ["plugin:@nx/javascript"],
       "rules": {}
     }
   ]
