--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.15",
     "@mui/styled-engine": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@nx/devkit": "18.0.7",
     "@prisma/client": "^5.13.0",
     "autoprefixer": "^10.4.19",
     "clsx": "^2.1.1",
@@ -52,6 +53,7 @@
     "@nx/jest": "^18.3.3",
     "@nx/js": "18.3.3",
     "@nx/next": "18.0.7",
+    "@nx/plugin": "18.0.7",
     "@nx/react": "18.0.7",
     "@nx/storybook": "18.0.7",
     "@nx/vite": "18.0.7",
