--- a/libs/plugins/package.json
+++ b/libs/plugins/package.json
@@ -3,10 +3,13 @@
   "version": "0.0.1",
   "dependencies": {
     "@nx/devkit": "18.0.7",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "@nx/next": "18.0.7",
+    "@nx/eslint": "18.0.7",
+    "@nx/react": "18.0.7"
   },
   "type": "commonjs",
-  "main": "./src/index.js",
+  "main": "./src/index.ts",
   "typings": "./src/index.d.ts",
   "generators": "./generators.json"
 }
