--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,9 @@ jobs:
         os: [ubuntu-latest]
         node-version: [20.x]
     steps:
+      - name: running echo
+        run: |
+          echo 'Hello from github action...'
       - name: checkout
         uses: actions/checkout@v4
       - name: run custom action.yml
