--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,9 @@ jobs:
           echo 'Hello from github action...'
       - name: checkout
         uses: actions/checkout@v3
+      - name: checking the folder content
+        run: |
+          ls
       - name: run custom action.yml
         uses: github-actions/action.yml
         with:
