--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "graphql": "^16.8.1",
     "msw": "^2.2.14",
     "next": "14.2.0",
+    "pg": "^8.12.0",
     "postcss": "^8.4.38",
     "prop-types": "15.8.1",
     "react": "18.2.0",
@@ -32,10 +33,12 @@
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
     "react-router-dom": "6.11.2",
+    "reflect-metadata": "^0.2.2",
     "sqlite3": "^5.1.7",
     "styled-components": "^6.1.8",
     "tailwind": "^4.0.0",
     "tslib": "^2.3.0",
+    "typeorm": "^0.3.20",
     "uuid": "^10.0.0",
     "zod": "^3.23.4"
   },
