--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@new/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.10.3",
@@ -37,6 +36,7 @@
     "sqlite3": "^5.1.7",
     "styled-components": "^6.1.8",
     "tailwind": "^4.0.0",
+    "ts-node": "^10.9.2",
     "tslib": "^2.3.0",
     "typeorm": "^0.3.20",
     "uuid": "^10.0.0",
@@ -115,7 +115,6 @@
     "storybook": "7.6.17",
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
-    "ts-node": "10.9.1",
     "typescript": "~5.3.2",
     "vite": "~5.0.0",
     "vite-plugin-dts": "~2.3.0",
