--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "babel-plugin-module-resolver": "4.1.0",
     "babel-preset-gatsby": "2.2.0",
     "cypress": "13.6.4",
+    "dotenv": "^16.4.5",
     "eslint": "~8.48.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.0.0",
