Update nextjs project setup to get typeorm running

--- a/apps/next-mood/tsconfig.json
+++ b/apps/next-mood/tsconfig.json
@@ -5,6 +5,8 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "./build",
-    "sourceMap": true
+    "sourceMap": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true
   }
 }
