--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql": "^16.8.1",
     "msw": "^2.2.14",
     "next": "14.2.0",
+    "next-auth": "^5.0.0-beta.19",
     "pg": "^8.12.0",
     "postcss": "^8.4.38",
     "prop-types": "15.8.1",
