--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,6 @@ jobs:
         run: |
           ls
       - name: run custom action.yml
-        uses: github-actions/action.yml
+        uses: ./github-actions/action
         with:
           message: ${{ secrets.MESSAGE }}
