--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,7 @@ jobs:
         run: |
           pwd
       - name: run custom action.yml
+        # This is the folder path where action.yml is in
         uses: ./github-actions
         with:
           message: ${{ secrets.MESSAGE }}
