--- a/apps/next-auth/tsconfig.json
+++ b/apps/next-auth/tsconfig.json
@@ -25,8 +25,8 @@
     "**/*.tsx",
     "**/*.js",
     "**/*.jsx",
-    "../../next-clerk/.next/types/**/*.ts",
-    "../../dist/next-clerk/.next/types/**/*.ts",
+    "../../apps/next-auth/.next/types/**/*.ts",
+    "../../dist/apps/next-auth/.next/types/**/*.ts",
     "next-env.d.ts",
     ".next/types/**/*.ts"
   ],
