--- a/tsconfig.typeorm.json
+++ b/tsconfig.typeorm.json
@@ -7,6 +7,7 @@
     "moduleResolution": "Node",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
+    "strictPropertyInitialization": false,
     "resolveJsonModule": true,
     "skipLibCheck": true,
     "strict": true,
