--- a/apps/react-my-playground-e2e/project.json
+++ b/apps/react-my-playground-e2e/project.json
@@ -3,7 +3,14 @@
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/react-my-playground-e2e/src",
-  "targets": {},
+  "targets": {
+    "cy-panel": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "yarn cypress open --config-file apps/react-my-playground-e2e/cypress.config.ts"
+      }
+    }
+  },
   "implicitDependencies": ["react-my-playground"],
   "tags": []
 }
