--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@swc/helpers": "~0.5.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/typography": "^0.5.13",
+    "@testing-library/cypress": "^10.0.2",
     "@testing-library/dom": "^10.0.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "14.0.0",
