--- a/libs/utils-apollo-provider/tsconfig.json
+++ b/libs/utils-apollo-provider/tsconfig.json
@@ -8,7 +8,7 @@
     "types": ["vite/client"]
   },
   "files": [],
-  "include": [],
+  "include": ["src/custom.d.ts"],
   "references": [
     {
       "path": "./tsconfig.lib.json"
