--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "@vitejs/plugin-react": "^4.2.0",
     "@vitest/coverage-v8": "^1.0.4",
     "@vitest/ui": "^1.3.1",
+    "@zendesk/laika": "^1.4.1",
     "axios": "^1.6.8",
     "babel-jest": "^29.4.1",
     "babel-plugin-module-resolver": "4.1.0",
