--- a/package.json
+++ b/package.json
@@ -10,22 +10,31 @@
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@libsql/client": "^0.8.0",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
     "@mui/styled-engine": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
+    "@nextui-org/react": "^2.4.6",
     "@nx/devkit": "18.0.7",
     "@prisma/client": "^5.13.0",
+    "@scaleway/random-name": "^5.1.0",
     "@tanstack/react-table": "^8.19.2",
     "autoprefixer": "^10.4.19",
+    "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.11",
+    "drizzle-orm": "^0.32.1",
     "formik": "^2.4.6",
+    "framer-motion": "^11.3.19",
     "geist": "^1.3.0",
     "graphql": "^16.8.1",
+    "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.417.0",
     "msw": "^2.2.14",
     "next": "14.2.0",
     "next-auth": "^5.0.0-beta.19",
+    "nextjs-better-unstable-cache": "^1.1.0",
     "pg": "^8.12.0",
     "postcss": "^8.4.38",
     "prop-types": "15.8.1",
@@ -35,6 +44,7 @@
     "react-helmet": "6.1.0",
     "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.2.2",
+    "server-only": "^0.0.1",
     "sqlite3": "^5.1.7",
     "styled-components": "^6.1.8",
     "tailwind": "^4.0.0",
@@ -82,7 +92,9 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "14.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.4.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "18.16.9",
     "@types/react": "18.2.33",
     "@types/react-dom": "18.2.14",
@@ -98,6 +110,7 @@
     "babel-preset-gatsby": "2.2.0",
     "cypress": "13.6.4",
     "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.23.1",
     "eslint": "~8.48.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.0.0",
@@ -120,6 +133,7 @@
     "storybook": "7.6.17",
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
+    "tsx": "^4.16.3",
     "typescript": "~5.3.2",
     "vite": "~5.0.0",
     "vite-plugin-dts": "~2.3.0",
