--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,11 @@ jobs:
       - name: checking the current directory
         run: |
           pwd
-      - name: run custom action.yml
-        # This is the folder path where action.yml is in
-        uses: ./github-actions
-        with:
-          message: ${{ secrets.MESSAGE }}
+
+      # This was initiall for testing the the custom action.yml. Failing in CI.
+      # Commenting it out for now.
+      # - name: run custom action.yml
+      #   # This is the folder path where action.yml is in
+      #   uses: ./github-actions
+      #   with:
+      #     message: ${{ secrets.MESSAGE }}
