--- a/nx.json
+++ b/nx.json
@@ -91,6 +91,12 @@
         "style": "css",
         "linter": "eslint"
       }
+    },
+    "@nx/web:application": {
+      "style": "css",
+      "linter": "eslint",
+      "unitTestRunner": "vitest",
+      "e2eTestRunner": "none"
     }
   },
   "targetDefaults": {
