--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.15.0",
     "storybook": "7.6.17",
+    "swc-loader": "0.1.15",
     "tailwindcss": "3.2.7",
     "ts-jest": "^29.1.0",
     "tsx": "^4.16.3",
