--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,32 +1,37 @@
-name: Playing around with github action...
+name: Deploy to GitHub Page from main branch
 on:
   push:
     branches:
       - main
 jobs:
-  use-docker-file-action:
+  run-test-deploy:
     runs-on: ubuntu-latest
     strategy:
       matrix:
         os: [ubuntu-latest]
         node-version: [20.x]
     steps:
-      - name: running echo
+      - name: Checkout
+        uses: actions/checkout@v2
+        with:
+          persist-credentials: false
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: Install
         run: |
-          echo 'Hello from github action...'
-      - name: checkout
-        uses: actions/checkout@v3
-      - name: checking the folder content
+          yarn install
+      - name: Build
         run: |
-          ls
-      - name: checking the current directory
-        run: |
+          yarn nx build fe-sys-design
           pwd
-
-      # This was initiall for testing the the custom action.yml. Failing in CI.
-      # Commenting it out for now.
-      # - name: run custom action.yml
-      #   # This is the folder path where action.yml is in
-      #   uses: ./github-actions
-      #   with:
-      #     message: ${{ secrets.MESSAGE }}
+      - name: Deploy to Github page
+        uses: JamesIves/github-pages-deploy-action@3.7.1
+        with:
+          ACCESS_TOKEN: ${{ secrets.REACT_MICROFRONTENDS_EXAMPLE }}
+          BRANCH: master # The branch the action should deploy to.
+          FOLDER: dist/apps/fe-sys-design # The folder the action should deploy.
+          REPOSITORY_NAME: takahirohonda/takahirohonda.github.io
+          TARGET_FOLDER: learn-german-test1
+          CLEAN: true # Automatically remove deleted files from the deploy branch
