--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Deploy to Github page
         uses: JamesIves/github-pages-deploy-action@3.7.1
         with:
-          ACCESS_TOKEN: ${{ secrets.REACT_MICROFRONTENDS_EXAMPLE }}
+          ACCESS_TOKEN: ${{ secrets.GIT_PAGE_DEPLOY  }}
           BRANCH: master # The branch the action should deploy to.
           FOLDER: dist/apps/fe-sys-design # The folder the action should deploy.
           REPOSITORY_NAME: takahirohonda/takahirohonda.github.io
