--- a/apps/fe-sys-design/project.json
+++ b/apps/fe-sys-design/project.json
@@ -10,6 +10,12 @@
       "options": {
         "command": "yarn nx serve fe-sys-design"
       }
+    },
+    "build-ci": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "export GIT_PAGE_DEPLOY=true && yarn nx build fe-sys-design"
+      }
     }
   }
 }
