--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
           yarn install
       - name: Build
         run: |
-          yarn nx build fe-sys-design
+          yarn nx build-ci fe-sys-design
           pwd
       - name: Deploy to Github page
         uses: JamesIves/github-pages-deploy-action@3.7.1
