--- a/package.json
+++ b/package.json
@@ -138,6 +138,7 @@
     "typescript": "~5.3.2",
     "vite": "~5.0.0",
     "vite-plugin-dts": "~2.3.0",
+    "vite-plugin-pwa": "^0.20.1",
     "vitest": "^1.3.1"
   }
 }
