--- a/apps/learn-german/manifest.json
+++ b/apps/learn-german/manifest.json
@@ -44,7 +44,7 @@
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#fff",
-  "theme_color": "#131313",
+  "theme_color": "#e4ff19",
   "description": "Learn German!",
   "dir": "ltr",
   "lang": "en-US"
