Update .eslintrc for nx lib path

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -44,5 +44,13 @@
       "extends": ["plugin:@nx/javascript"],
       "rules": {}
     }
-  ]
+  ],
+  "settings": {
+    "import/resolver": {
+      "typescript": {
+        "alwaysTryTypes": true,
+        "project": "tsconfig.base.json"
+      }
+    }
+  }
 }
