--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@prisma/client": "^5.13.0",
     "@scaleway/random-name": "^5.1.0",
     "@tanstack/react-table": "^8.19.2",
+    "apollo3-cache-persist": "^0.15.0",
     "autoprefixer": "^10.4.19",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
