--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@emotion/styled": "^11.11.5",
     "@headlessui/react": "^2.0.3",
     "@heroicons/react": "^2.1.3",
+    "@hookform/resolvers": "^3.9.0",
     "@libsql/client": "^0.8.0",
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.15",
@@ -43,6 +44,7 @@
     "react-cookie": "^7.1.4",
     "react-dom": "18.2.0",
     "react-helmet": "6.1.0",
+    "react-hook-form": "^7.53.0",
     "react-router-dom": "6.11.2",
     "reflect-metadata": "^0.2.2",
     "server-only": "^0.0.1",
